--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,13 +1,26 @@
+
+
 {% extends 'base.html' %}
-
+{% load widget_tweaks %}
 {% block content %}
- <h1>新規登録</h1>
-   <form method="post">
-     {% csrf_token %}
-     {{ form.as_p }}
-     <button type="submit">登録</button>
- 　</form>
- <a href="{% url 'account_login' %}">ログイン</a>
- <p><a class="button" href="{% url 'index' %}">トップページへ</a></p>
+<h1 class="mt-5 pt-4 text-center">Signup</h1>
+ <form class="form-signin" method="post">
+   {% csrf_token %}
+   <label for="id_username" class="sr-only">ユーザー名</label>
+   <input type="text" name="username" placeholder="名前" maxlength="150" class="form-control mb-3" required id="id_username" autofocus>
 
+   <label for="id_email" class="sr-only">メールアドレス</label>
+   <input type="email" name="email" placeholder="メールアドレス" maxlength="254" class="form-control mb-3" required id="id_email">
+
+   <label for="id_password1" class="sr-only">パスワード</label>
+   <input type="password" name="password1" placeholder="パスワード" autocomplete="new-password" class="form-control mb-3" id="id_password1">
+
+   <label for="id_password2" class="sr-only">パスワード(確認用)</label>
+   <input type="password" name="password2" placeholder="パスワード(確認用)" autocomplete="new-password" class="form-control mb-3" required id="id_password2">
+
+   <button type="submit" class="btn btn-block btn-outline-success">Signup</button>
+ </form>
+  <p>既にアカウントをお持ちですか?? <a href="{% url 'account_login' %}">Login</a></p>
+</div>
+</div>
 {% endblock %}
