--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -16,7 +16,7 @@
 <p>まだアカウントをお持ちでない方は<a href="{{ account_signup_url }}">新規登録</a>してください</p>
 {% endif %}
 
-<h1 class="mt-5 pt-4 text-center">Login</h1>
+<h1 class="text-center">Login</h1>
 <form method="post">
 {% csrf_token %}
 <label for="id_login" class="sr-only">メールアドレス</label>
