--- a/templates/blog_app/index.html
+++ b/templates/blog_app/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1 class="mt-5 pt-4 text-center">ブログサイト</h1>
+<h1 class="text-center">ブログサイト</h1>
 
 {% if user.is_authenticated %}
  こんにちは {{ user.username }}様!
