--- a/templates/account/edit.html
+++ b/templates/account/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block content %}
-<h1 class="mt-5 pt-4 text-center">{{user.username}}を編集</h1>
+<h1 class="text-center">{{user.username}}を編集</h1>
  <form class="form-signin" method="post">
    {% csrf_token %}
 
