--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block content %}
-<h1 class="mt-5 pt-4 text-center">Signup</h1>
+<h1 class="text-center">Signup</h1>
  <form class="form-signin" method="post">
    {% csrf_token %}
    <label for="id_username" class="sr-only">ユーザー名</label>
