--- a/templates/blog_app/add.html
+++ b/templates/blog_app/add.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %} <!-- 追加 -->
+{% load widget_tweaks %}
 {% block content %}
-<h1 class="mt-5 pt-4 text-center">新規投稿</h1>
+<h1 class="text-center">新規投稿</h1>
 <form action="{% url 'blog_app:add' %}" method="POST" enctype="multipart/form-data">
  {% csrf_token %}
 
