--- a/templates/blog_app/edit.html
+++ b/templates/blog_app/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block content %}
-<h1 class="mt-5 pt-4 text-center">編集</h1>
+<h1 class="text-center">編集</h1>
 <form method="POST" enctype="multipart/form-data">
  {% csrf_token %}
 
