--- a/templates/header.html
+++ b/templates/header.html
@@ -25,6 +25,9 @@
         <a class="nav-link" href="{% url 'account_login' %}">ログイン</a>
       </li>
       {% endif %}
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="{% url 'blog_app:contact' %}">お問い合わせ</a>
+      </li>
     </ul>
   </div>
 </nav>
