--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
  <head>
    <meta charset="UTF-8">
    <meta name="description" content=""/>
+   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
    <title>Blog</title>
  </head>
@@ -17,5 +18,28 @@
 </div>
 {% include 'footer.html' %}
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(event){
+
+ $(document).on('submit', '.comment-form', function(event){
+    event.preventDefault();
+    console.log($(this).serialize());
+    $.ajax({
+    type: 'POST',
+    url: $(this).attr('action'),
+    data: $(this).serialize(),
+    dataType: 'json',
+    success: function(response){
+      $('.main-comment-section').html(response['form']);
+    },
+    error: function(rs, e){
+      console.log(rs.responseText);
+    },
+   });
+ });
+});
+</script>
  </body>
 </html>
