--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %} ログイン-{{ block.super }}{% endblock %}
+
 {% load widget_tweaks %}
 {% block content %}
 
