--- a/templates/blog_app/contact.html
+++ b/templates/blog_app/contact.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %} お問い合わせ-{{ block.super }}{% endblock %}
+
 {% block content %}   
 
 <header class="contact-masthead">
