--- a/templates/blog_app/detail.html
+++ b/templates/blog_app/detail.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %} 記事詳細-{{ block.super }}{% endblock %}
+
 {% block content %}   
 
 <div class="card text-secondary" style="margin-top: 55px;">
