--- a/templates/header.html
+++ b/templates/header.html
@@ -29,5 +29,6 @@
         <a class="nav-link js-scroll-trigger" href="{% url 'blog_app:contact' %}">お問い合わせ</a>
       </li>
     </ul>
+   {% include 'search.html' %}
   </div>
 </nav>
