--- a/templates/account/detail.html
+++ b/templates/account/detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-{% block content %}   
+{% block title %} ユーザー詳細-{{ block.super }}{% endblock %}
+
+{% block content %}
+
 <h1 class="text-center my-5">{{ user.username }}のページ</h1>
 
 {% if request.user == user %} 
