--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+{% block title %} ログアウト-{{ block.super }}{% endblock %}
 
 {% block content %}
+
 {% load account socialaccount %}
 
 {% get_providers as socialaccount_providers %}
