--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,8 +1,9 @@
-
-
 {% extends 'base.html' %}
+{% block title %} 新規登録-{{ block.super }}{% endblock %}
+
 {% load widget_tweaks %}
 {% block content %}
+
 <h1 class="text-center">Signup</h1>
  <form class="form-signin" method="post">
    {% csrf_token %}
