--- a/templates/blog_app/add.html
+++ b/templates/blog_app/add.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %} 記事投稿-{{ block.super }}{% endblock %}
+
 {% load widget_tweaks %}
 {% block content %}
+
 <h1 class="text-center">新規投稿</h1>
 <form action="{% url 'blog_app:add' %}" method="POST" enctype="multipart/form-data">
  {% csrf_token %}
