--- a/templates/blog_app/edit.html
+++ b/templates/blog_app/edit.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %} 記事編集-{{ block.super }}{% endblock %}
+
 {% load widget_tweaks %}
 {% block content %}
+
 <h1 class="text-center">編集</h1>
 <form method="POST" enctype="multipart/form-data">
  {% csrf_token %}
