--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
  <head>
    <meta charset="UTF-8">
    <meta name="description" content=""/>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
    <title>{% block title %} ブログ {% endblock %}</title>
